@@ -10,5 +10,6 @@ production includes testing of NuRadioReco files
 
 bugfixes:
 	- fixed that Veff utility script didn't calculate effective volumes for individual triggers
+	- fixed that the multiple_triggers key was not created for multiple stations
 
 version 1.0.0 - 2019/08/30 - first python 3 release
